--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/055. Cucumber.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/055. Cucumber.md
@@ -1,55 +1,9 @@
 ---
 type: docs
-title: "Make some changes to the UI"
-linkTitle: "Make some changes to the UI"
+title: "Cucumber"
+linkTitle: "Cucumber"
 weight: 50
 description: >
-  Start making this project your own.
+  Cucumber.
 ---
 
-## Create a branch
-
-`feature/us-202107171752-ui-customization`
-
-## Install bootstrap and bootswatch
-
-You'll install:
-  - [ng-bootstrap](https://ng-bootstrap.github.io)
-  - bootstrap
-  - bootswatch
-
-{{% alert title="Credit where credit is due" color="info" %}}
-This approach came from R & R Engineering's
-[Adding Bootstrap and Bootswatch to Angular.CLI](http://randreng.com/adding-bootsrap-and-bootswatch-to-angular-cli/).
-{{% /alert %}}
-
-~~~
-npm install @ng-bootstrap/ng-bootstrap bootstrap bootswatch
-~~~
-
-## Create ./project/src/_variables.scss
-
-In the src directory add a new file `_variables.scss`. This file will hold all
-of the scss variables for the entire project. This file can be referenced by
-any and all component level scss files to get the values for colors and font
-and such. By reference this file in the component level scss files, we will
-have access to all the theme variables keeping styles consistent. This will
-limit the number of places we will need to change if we change themes in the
-future.
-
-~~~
-echo '@import "../node_modules/bootswatch/dist/superhero/_variables";' > .\src\_variables.scss
-~~~
-
-## Edit ./src/style.scss
-
-~~~
-@import "./variables"; 
-@import "../node_modules/bootstrap/scss/bootstrap"; 
-@import "../node_modules/bootswatch/dist/superhero/bootswatch";
-~~~
-
-## Pull request time!
-
-PR, approval, complete, switch to `main`, pull `main`, 
-delete the now-unnecessary local feature branch.
