WIP on Angular SPA section.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Create a local git repo.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Create a local git repo.md
@@ -1,60 +1,44 @@
 ---
 type: docs
-title: "Create a local git repo"
-linkTitle: "Create a local git repo"
+title: "Clone the repo in VS Code"
+linkTitle: "Clone the repo in VS Code"
 weight: 30
 description: >
-  No need to wait for your remote repo; get started right away.
+  Clone the bc###-admin-spa repository in Visual Studio Code.
 ---
 
-## Pick some short paths
+## Your team number
 
-We suggest `c:\src\dii\.` as the directory in which to put the code for all of your
-Drive-Ins Inc.
-projects.
+Your instructor will have given you your team number and a link
+to your team's repositories.
 
-The first microservice you'll create is the Angular frontend for
-Drive-Ins Inc's administrative app.
+In the examples that follow, we'll assume you're on team 000.
 
-We suggest `c:\src\dii\dii_admin_fe\.` as the directory for that
-microservice's code.
+## Clone it
 
-Following our naming guidelines
-{TODO: link to the naming guidelines}
-our Azure Devops repo will be named `dii_administration_frontend`.
-But for the local repo you don't want the path to the project to be super long
-because later we'll be using 
+From the repo list that your instructor gave you:
+
+ - Copy the repo path into the clipboard.
+   Example: `https://github.com/OnbeU/bc000-admin-spa.git`
+
+In Visual Studio Code:
+
+ - `Ctrl + Shift + P` to show commands.
+ - Type **Git: Clone** and hit **Enter**.
+ - Paste the repo path.
+   Example: `https://github.com/OnbeU/bc000-admin-spa.git`
+ - Choose the target directory `C:\src\dii\`
+
+{{% alert title="Why so short?" color="info" %}}
+Why have a short path like, `C:\src\dii\bc000-admin-spa\`, instead of the
+longer path that Visual Studio (not-Code) defaults to, like
+`C:\Users\jsmith\source\repos\bc000_administration_frontend\`?
+
+Because later we'll be using 
 [some tools from Pact](https://github.com/pact-foundation)
 which use Ruby and for some reason Ruby on Windows 10 has a 260 character limit for path names.
+{{% /alert %}}
 
-So we don't want to use, say,
-`C:\Users\jsmith\source\repos\dii_administration_frontend\.`
-
-## Open VS Code in the local directory and start a powershell terminal
-Start a command prompt.
-
-```
-md c:\src\dii\dii_admin_fe
-code c:\src\dii\dii_admin_fe
-```
-Start a terminal (powershell).
-
-## Initialize the local git repo
-
-Remember to use `main` and not `master`.
-
-~~~
-git init --initial-branch=main
-~~~
-
-## Create a README.md
-
-~~~
-echo "Fill in this README" > README.md
-~~~
-
-## Commit to origin
-
-That's as much work as you'll ever want to do directly on `main`. Stage and commit with the message "Added README.md".
+## TODO: Provide instructions on creating a branch and how to name it.
 
 TODO: Provide instructions on creating a branch and how to name it.
