--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
@@ -12,10 +12,10 @@ description: >
 
 `feature/us-202107171725-angular-setup`
 
-## Generate the Angular app in the ./project/ directory
+## Generate the Angular app in the ./ directory
 
 ~~~
-npx -p @angular/cli ng new --directory=./project --routing=true --style=scss dii-administration-frontend
+npx -p @angular/cli ng new --directory=./ --routing=true --style=scss project
 ~~~
 
 Let's break down that command line.
@@ -24,24 +24,15 @@ Let's break down that command line.
    - Install the Angular CLI tool into that package
    - Call the Angular CLI `ng` tool once it's installed
  - `ng new` tells the Angular CLI to create a new app
-   - `--directory=./project` is the location of the app (and the `package.json`)
+   - `--directory=./` is the location of the app (and the `package.json`)
    -  `--routing=true` means we want Angular Routing
    -  `--style=scss` means we want to use SCSS for style
       (because [SCSS is better](https://www.mugo.ca/Blog/7-benefits-of-using-SASS-over-conventional-CSS))
-   -  `dii-administration-frontend` is the name that will be added to `package.json`
+   -  `project` is the name that will be added to `package.json`.
+      We use the name `project` in all of our Angular apps so the directory names will be
+      consistent and our pipeline will be able to find them.
 
-{{% alert title="Don't listen to that guy" color="warning" %}}
-Lots of sources will tell you to use `ng` directly instead of using `npx -p @angular/cli ng`.
-
-Don't listen to them. Using `ng` directly means you 
-and every other developer on the team
-would be using whichever version of the Angular CLI is installed on the
-local machine at the time. We use `npx` to ensure that the version of
-`ng` that is used is the version which is installed into `package.json`.
-{{% /alert %}}
-
-
-Stage and commit to local feature branch with comment "npx -p @angular/cli ng new --directory=./project --routing=true --style=scss dii-administration-frontend".
+Stage and commit to local feature branch with comment "ng new".
 
 Add these lines to `project.json`:
 
@@ -57,10 +48,14 @@ Add these lines to `project.json`:
 }
 ~~~
 
-TODO: Explain why we use "private" and "UNLICENSED".
+
+{{% alert title="This is not open source" color="info" %}}
+Why we use "private" and "UNLICENSED"?
+
+Because this is not open-source software. It's copyrighted stuff.
+{{% /alert %}}
 
 Stage and commit to local feature branch with comment "Updated package.json".
-
 
 ## Explore the new app
 
@@ -69,12 +64,6 @@ Let's take a look at what `ng` has created for us.
 ### Continuously-running unit tests
 
 In VS Code, start a new Terminal and name it "karma".
-
-Change to the `./project/` directory.
-
-~~~
-cd ./project/
-~~~
 
 Fire up the [Karma](https://github.com/karma-runner/karma) test runner to continuously
 run your unit tests in a browser window.
@@ -88,12 +77,6 @@ TODO: Discuss how we'll keep this browser window open during development.
 ### Browse the continuously-updated app
 
 In VS Code, start a new Terminal and name it "angular".
-
-Change to the `./project/` directory.
-
-~~~
-cd ./project/
-~~~
 
 Start the app
 
