More fake backend.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
@@ -14,6 +14,16 @@ description: >
 
 ## Generate the Angular app in the ./ directory
 
+Delete some files that we're about to overwrite.
+
+~~~
+rm package.json
+rm package-lock.json
+rm index.html
+rm README.md
+rm .gitignore
+~~~
+
 ~~~
 npx -p @angular/cli ng new --directory=./ --routing=true --style=scss project
 ~~~
