Changed DII project from admin to theatermanagement.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Create a local git repo.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Create a local git repo.md
@@ -4,7 +4,7 @@ title: "Clone the repo in VS Code"
 linkTitle: "Clone the repo in VS Code"
 weight: 30
 description: >
-  Clone the bc###-admin-spa repository in Visual Studio Code.
+  Clone the bc###-theatermanagement-spa repository in Visual Studio Code.
 ---
 
 ## Your team number
@@ -19,20 +19,20 @@ In the examples that follow, we'll assume you're on team 000.
 From the repo list that your instructor gave you:
 
  - Copy the repo path into the clipboard.
-   Example: `https://github.com/OnbeU/bc000-admin-spa.git`
+   Example: `https://github.com/OnbeU/bc000-theatermanagement-spa.git`
 
 In Visual Studio Code:
 
  - `Ctrl + Shift + P` to show commands.
  - Type **Git: Clone** and hit **Enter**.
  - Paste the repo path.
-   Example: `https://github.com/OnbeU/bc000-admin-spa.git`
- - Choose the target directory `C:\src\dii\`
+   Example: `https://github.com/OnbeU/bc000-theatermanagement-spa.git`
+ - Choose the target directory `C:\src\onbe\`
 
 {{% alert title="Why so short?" color="info" %}}
-Why have a short path like, `C:\src\dii\bc000-admin-spa\`, instead of the
+Why have a short path like, `C:\src\onbe\bc000-theatermanagement-spa\`, instead of the
 longer path that Visual Studio (not-Code) defaults to, like
-`C:\Users\jsmith\source\repos\bc000_administration_frontend\`?
+`C:\Users\jsmith\source\repos\bc000_theatermanagement_frontend\`?
 
 Because later we'll be using 
 [some tools from Pact](https://github.com/pact-foundation)
