WIP on Angular pages

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/020. Explore the project.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/020. Explore the project.md
@@ -39,6 +39,7 @@ Before you do anything else, do:
 
 ~~~
 npm update
+npm update -D
 ~~~
 
 Now try out some of the scripts in `package.json`, such as:
