--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Fake the backend.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Fake the backend.md
@@ -142,3 +142,17 @@ module.exports = async function (context, req) {
 
 </html>
 ~~~
+
+### Expose to workblow
+
+Rename `./api/` to `./fake-backend/`
+
+### Run with Azure Static Web Apps CLI
+
+~~~
+swa start dist/project --api fake-backend
+~~~
+
+A good explanation of the Azure Static Web Apps CLI is
+[here](https://docs.microsoft.com/en-us/azure/static-web-apps/local-development#how-it-works).
+
