--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
@@ -67,6 +67,18 @@ Because this is not open-source software. It's copyrighted stuff.
 
 Stage and commit to local feature branch with comment "Updated package.json".
 
+## Take a break!
+
+This is a good time to take a break. The `ng new` command will take a few minutes to run.
+
+When you get back from break, do yourself a favor and run this command:
+
+~~~
+npm run test
+~~~
+
+(That command also takes a while to run.)
+
 ## Explore the new app
 
 Let's take a look at what `ng` has created for us.
