Faked the backend.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Fake the backend.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/030. Fake the backend.md
@@ -7,98 +7,11 @@ description: >
   Fake it 'til you make it (then keep fakin' it).
 ---
 
-TODO: Make the following prettier.
+### Create feature branch
 
-https://docs.microsoft.com/en-us/azure/static-web-apps/add-api?tabs=angular
+feature/fake-the-backend
 
-Press F1 to open the Command Palette.
-
-Select Azure Static Web Apps: Create HTTP Function.... If you're prompted to install the Azure Functions extension, install it and re-run this command.
-
-When prompted, enter the following values:
-
-| Prompt  | Value
-|---|---
-| Select a language | JavaScript
-| Provide a function name | movies
-
-{{% alert title="What, no love for C#?" color="primary" %}}
-How come we're using JavaScript instead of, say, C#?
-
-We'll get back to that later in bootcamp when we show how
-your fake backend can leverage Express.js packages like
-[json-server](https://github.com/typicode/json-server).
-{{% /alert %}}
-
-### /api/movies/index.js
-
-~~~
-module.exports = async function (context, req) {
-    context.log('JavaScript HTTP trigger function processed a request.');
-
-    const response = [
-        {
-          "id": "tt3778644",
-          "title": "Solo: A Star Wars Story"
-        },
-        {
-          "id": "tt3748528",
-          "title": "Rogue One: A Star Wars Story"
-        },
-        {
-          "id": "tt0120915",
-          "title": "Star Wars: Episode I - The Phantom Menace"
-        },
-        {
-          "id": "tt0121765",
-          "title": "Star Wars: Episode II - Attack of the Clones"
-        },
-        {
-          "id": "tt0121766",
-          "title": "Star Wars: Episode III - Revenge of the Sith"
-        },
-        {
-          "id": "tt0076759",
-          "title": "Star Wars: Episode IV - A New Hope"
-        },
-        {
-          "id": "tt2527338",
-          "title": "Star Wars: Episode IX - The Rise of Skywalker"
-        },
-        {
-          "id": "tt0080684",
-          "title": "Star Wars: Episode V - The Empire Strikes Back"
-        },
-        {
-          "id": "tt0086190",
-          "title": "Star Wars: Episode VI - Return of the Jedi"
-        },
-        {
-          "id": "tt2488496",
-          "title": "Star Wars: Episode VII - The Force Awakens"
-        },
-        {
-          "id": "tt2527336",
-          "title": "Star Wars: Episode VIII - The Last Jedi"
-        },
-        {
-          "id": "tt0193524",
-          "title": "The Star Wars Holiday Special"
-        }];
-    const responseMessage = JSON.stringify(response);
-
-    context.res = {
-        // status: 200, /* Defaults to 200 */
-        body: responseMessage,
-        headers: {
-            'Content-Type': 'application/json'
-        }
-    };
-
-}
-~~~
-
-### index.html
+### Update index.html
 
 ~~~
 <!DOCTYPE html>
@@ -143,6 +56,55 @@ module.exports = async function (context, req) {
 </html>
 ~~~
 
+### TODO: Better title here
+
+TODO: Make the following prettier.
+
+https://docs.microsoft.com/en-us/azure/static-web-apps/add-api?tabs=angular
+
+Press F1 to open the Command Palette.
+
+Select Azure Static Web Apps: Create HTTP Function.... If you're prompted to install the Azure Functions extension, install it and re-run this command.
+
+When prompted, enter the following values:
+
+| Prompt  | Value
+|---|---
+| Select a language | JavaScript
+| Provide a function name | movies
+
+{{% alert title="What, no love for C#?" color="primary" %}}
+How come we're using JavaScript instead of, say, C#?
+
+We'll get back to that later in bootcamp when we show how
+your fake backend can leverage Express.js packages like
+[json-server](https://github.com/typicode/json-server).
+{{% /alert %}}
+
+### /api/movies/index.js
+
+~~~
+module.exports = async function (context, req) {
+    context.log('JavaScript HTTP trigger function processed a request for movies.');
+
+    const response = [
+        { "id": "tt0076759", "title": "Star Wars: Episode IV - A New Hope" },
+        { "id": "tt0080684", "title": "Star Wars: Episode V - The Empire Strikes Back" },
+        { "id": "tt0086190", "title": "Star Wars: Episode VI - Return of the Jedi" },
+        { "id": "tt0193524", "title": "The Star Wars Holiday Special" }
+    ];
+    const responseMessage = JSON.stringify(response);
+
+    context.res = {
+        // status: 200, /* Defaults to 200 */
+        body: responseMessage,
+        headers: {
+            'Content-Type': 'application/json'
+        }
+    };
+}
+~~~
+
 ### Expose to workblow
 
 Rename `./api/` to `./fake-backend/`
@@ -150,9 +112,24 @@ Rename `./api/` to `./fake-backend/`
 ### Run with Azure Static Web Apps CLI
 
 ~~~
+npm run build
 swa start dist/project --api fake-backend
 ~~~
 
+The Azure Static Web Apps emulator should now be running. Under "Available on:" it will
+tell you which URLs you may use to view your app within the emulator; e.g. `http://10.0.0.11:4280`
+
+Try adding `/.auth/login/github` to the link to see an emulated auth page.
+
+{{% alert title="Further reading on the Azure Static Web Apps CLI" color="primary" %}}
 A good explanation of the Azure Static Web Apps CLI is
 [here](https://docs.microsoft.com/en-us/azure/static-web-apps/local-development#how-it-works).
+{{% /alert %}}
 
+TODO: Add the image and explanation from the above link.
+
+### Deploy
+
+Commit with comment "Faked the backend.".
+
+Push, create a pull request, complete the pull request and delete the branches.
