--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
@@ -119,3 +119,6 @@ Hopefully by now your remote git is ready.
   - Switch from the local feature branch to `main`.
   - Pull `main` to local.
   - Delete the now-unnecessary local feature branch.
+
+TODO: Add instructions for a script in package.json that runs the SWA against the `ng serve` stuff.
+
