--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/040. Init the Angular project.md
@@ -10,7 +10,7 @@ description: >
 
 ## Create a branch
 
-`feature/us-202107171725-angular-setup`
+`feature/angular-setup`
 
 ## Generate the Angular app in the ./ directory
 
@@ -25,7 +25,7 @@ rm .gitignore
 ~~~
 
 ~~~
-npx -p @angular/cli ng new --directory=./ --routing=true --style=scss project
+npx -p @angular/cli ng new --directory=./ --routing=true --style=scss project ; npm run test
 ~~~
 
 Let's break down that command line.
@@ -41,6 +41,13 @@ Let's break down that command line.
    -  `project` is the name that will be added to `package.json`.
       We use the name `project` in all of our Angular apps so the directory names will be
       consistent and our pipeline will be able to find them.
+ - `; npm run test` is something we'll discuss later on this page.
+
+## Take a break!
+
+This is a good time to take a break. The `ng new` command and the `npm run test` command will take a few minutes to run.
+
+## When you're back and the commands have finished running
 
 Stage and commit to local feature branch with comment "ng new".
 
@@ -66,18 +73,6 @@ Because this is not open-source software. It's copyrighted stuff.
 {{% /alert %}}
 
 Stage and commit to local feature branch with comment "Updated package.json".
-
-## Take a break!
-
-This is a good time to take a break. The `ng new` command will take a few minutes to run.
-
-When you get back from break, do yourself a favor and run this command:
-
-~~~
-npm run test
-~~~
-
-(That command also takes a while to run.)
 
 ## Explore the new app
 
