Added the dashboard route.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
@@ -79,6 +79,28 @@ Commit with comment "ng g c dashboard"
 </div>
 ~~~
 
+### Add the dashboard root
+
+TODO: Copy the instructions from https://angular.io/tutorial/toh-pt5#add-the-dashboard-route
+
+Begin TODO: Discuss the difference between `src\app\app.component.html` being this...
+
+~~~
+<div class="container">
+  <app-dashboard></app-dashboard>
+</div>
+~~~
+
+...and `src\app\app.component.html` being this...
+
+~~~
+<router-outlet></router-outlet>
+~~~
+
+End TODO:
+
+Commit with comment "Dashboard is now the default page"
+
 ### Add a header
 
 ~~~
@@ -106,18 +128,11 @@ Commit with comment "ng g c header"
 Change `app.component.html` to:
 ~~~
 <div>
-  <!-- header -->
   <app-header></app-header>
-
-  <div class="container">
-  </div>
 </div>
 
 <router-outlet></router-outlet>
-
 ~~~
-
-TODO: Determine whether we should remove `<div class="container">` from the above.
 
 Commit with comment "Site now shows the header"
 
