Movie list page appears

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
@@ -49,6 +49,68 @@ Commit with comment "Removed a failing test"
 swa start http://localhost:4200 --api fake-backend
 ~~~
 
+### Add the 404
+
+~~~
+npx ng generate component areas/404/pages/page-not-found
+~~~
+
+...which may be abbreviated to...
+
+~~~
+npx ng g c areas/404/pages/page-not-found
+~~~
+
+At this point we'd inspect the changes made to:
+
+~~~
+app.module.ts
+src\app\areas\404\pages\page-not-found\page-not-found.component.html
+src\app\areas\404\pages\page-not-found\page-not-found.component.scss
+src\app\areas\404\pages\page-not-found\page-not-found.component.spec.ts
+src\app\areas\404\pages\page-not-found\page-not-found.component.ts
+~~~
+
+Commit with comment "ng g c page-not-found"
+
+Edit `src\app\app-routing.module.ts`
+
+~~~
+import { PageNotFoundComponent } from './areas/404/pages/page-not-found/page-not-found.component';
+import { NgModule } from '@angular/core';
+import { RouterModule, Routes } from '@angular/router';
+
+const routes: Routes = [
+  {path: '404', component: PageNotFoundComponent},
+  {path: '**', redirectTo: '/404'}
+
+];
+@NgModule({
+  imports: [RouterModule.forRoot(routes)],
+  exports: [RouterModule]
+})
+export class AppRoutingModule { }
+~~~
+
+TODO: Might need to change the above so there's a default page.
+
+Commit with comment "Redirection to /404"
+
+Download the file at https://i.imgur.com/qhMbkGi.jpg to `project\src\assets\images\confused-travolta.gif`
+
+Change the contents of `src\app\areas\404\pages\page-not-found\page-not-found.component.html` to:
+
+~~~
+<h1 align="center">Page Not Found</h1>
+<div class="text-center">
+  <img src="./assets/images/confused-travolta.gif"/>
+</div>
+~~~
+
+TODO: Discuss the removal of `project\src\assets\.gitkeep`
+
+Commit with comment "Confused Travolta"
+
 ### Add the dashboard
 
 ~~~
@@ -98,6 +160,27 @@ Begin TODO: Discuss the difference between `src\app\app.component.html` being th
 ~~~
 
 End TODO:
+
+Edit `src\app\app-routing.module.ts`
+
+~~~
+import { DashboardComponent } from './areas/dashboard/pages/dashboard/dashboard.component';
+import { PageNotFoundComponent } from './areas/404/pages/page-not-found/page-not-found.component';
+import { NgModule } from '@angular/core';
+import { RouterModule, Routes } from '@angular/router';
+
+const routes: Routes = [
+  {path: '' , component: DashboardComponent  },
+  {path: '404', component: PageNotFoundComponent},
+  {path: '**', redirectTo: '/404'}
+
+];
+@NgModule({
+  imports: [RouterModule.forRoot(routes)],
+  exports: [RouterModule]
+})
+export class AppRoutingModule { }
+~~~
 
 Commit with comment "Dashboard is now the default page"
 
@@ -159,3 +242,28 @@ src\app\areas\movies\pages\movie-list\movie-list.component.ts
 ~~~
 
 Commit with comment "ng g c movie-list"
+
+Edit `src\app\app-routing.module.ts`
+
+~~~
+import { NgModule } from '@angular/core';
+import { RouterModule, Routes } from '@angular/router';
+import { DashboardComponent } from './areas/dashboard/pages/dashboard/dashboard.component';
+import { PageNotFoundComponent } from './areas/404/pages/page-not-found/page-not-found.component';
+import { MovieListComponent } from './areas/movies/pages/movie-list/movie-list.component';
+
+const routes: Routes = [
+  {path: '' , component: DashboardComponent  },
+  {path: '404', component: PageNotFoundComponent},
+  {path: 'movies', component: MovieListComponent},
+  {path: '**', redirectTo: '/404'}
+
+];
+@NgModule({
+  imports: [RouterModule.forRoot(routes)],
+  exports: [RouterModule]
+})
+export class AppRoutingModule { }
+~~~
+
+Commit with comment "Movie list page appears"
