Added bootstrap and bootswatch

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
@@ -219,6 +219,36 @@ Change `app.component.html` to:
 
 Commit with comment "Site now shows the header"
 
+### Fix the warning that came from adding the header
+
+In the Terminal window that's running Karma you might see the following:
+
+~~~
+ERROR: 'NG0304: 'app-header' is not a known element:
+1. If 'app-header' is an Angular component, then verify that it is part of this module.
+2. If 'app-header' is a Web Component then add 'CUSTOM_ELEMENTS_SCHEMA' to the '@NgModule.schemas' of this component to suppress this message.'
+~~~
+
+There's nothing really wrong; it's just that one of the tests can't find the new header component.
+
+Add an import for `FormsModule` and a declaration for `HeaderComponent` to `src\app\app.component.spec.ts` like so:
+
+~~~
+...
+    await TestBed.configureTestingModule({
+      imports: [
+        FormsModule,
+        RouterTestingModule
+      ],
+      declarations: [
+        AppComponent,
+        HeaderComponent
+      ],
+...
+~~~
+
+Commit with the comment "Fixed error NG0304.".
+
 ### Add the movie list
 
 ~~~
