--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/050. Make some changes to the UI.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/050. Make some changes to the UI.md
@@ -37,8 +37,10 @@ have access to all the theme variables keeping styles consistent. This will
 limit the number of places we will need to change if we change themes in the
 future.
 
+Create `src\_variables.scss` and give it these contents:
+
 ~~~
-echo '@import "../node_modules/bootswatch/dist/superhero/_variables";' > .\src\_variables.scss
+@import "../node_modules/bootswatch/dist/flatly/_variables";
 ~~~
 
 ## Edit ./src/style.scss
@@ -46,8 +48,29 @@ echo '@import "../node_modules/bootswatch/dist/superhero/_variables";' > .\src\_
 ~~~
 @import "./variables"; 
 @import "../node_modules/bootstrap/scss/bootstrap"; 
-@import "../node_modules/bootswatch/dist/superhero/bootswatch";
+@import "../node_modules/bootswatch/dist/flatly/bootswatch";
 ~~~
+
+## TODO: app.module.ts
+
+Might need to document these changes to `src\app\app.module.ts`:
+
+~~~
+  imports: [
+    BrowserModule,
+    AppRoutingModule,
+    FormsModule,
+    HttpClientModule
+  ],
+  providers: [
+    AppComponent
+  ],
+  exports: [
+    HeaderComponent
+  ],
+~~~
+
+Commit with comment "Added bootstrap and bootswatch"
 
 ## Pull request time!
 
