ng g service service backend

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
@@ -320,3 +320,24 @@ export class AppRoutingModule { }
 ~~~
 
 Commit with comment "Movie list page appears"
+
+### Backend service
+
+~~~
+npx ng generate service core/singleton-services/backend
+~~~
+
+...which may be abbreviated to...
+
+~~~
+npx ng g service service core/singleton-services/backend
+~~~
+
+At this point we'd inspect the changes made to:
+
+~~~
+src\app\core\singleton-services\backend.service.spec.ts
+src\app\core\singleton-services\backend.service.ts
+~~~
+
+Commit with comment "ng g service service backend"
