--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
@@ -321,6 +321,30 @@ export class AppRoutingModule { }
 
 Commit with comment "Movie list page appears"
 
+### Environment service
+
+TODO: Document that this approach came from https://seangwright.medium.com/the-best-way-to-use-angulars-environment-files-a0c098551abc
+
+~~~
+npx ng generate interface core/IEnvironment
+~~~
+
+...which may be abbreviated to...
+
+~~~
+npx ng g interface core/IEnvironment
+~~~
+
+TODO: Discuss capitalization in the above.
+
+At this point we'd inspect the changes made to:
+
+~~~
+src\app\core\ienvironment.ts
+~~~
+
+Commit with comment "ng g interface IEnvironment"
+
 ### Backend service
 
 ~~~
