Angular app displays cached movie list

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/045. Quick list the movies.md
@@ -345,23 +345,63 @@ src\app\core\ienvironment.ts
 
 Commit with comment "ng g interface IEnvironment"
 
-### Backend service
-
 ~~~
-npx ng generate service core/singleton-services/backend
+npx ng generate service core/singleton-services/environment
 ~~~
 
 ...which may be abbreviated to...
 
 ~~~
-npx ng g service service core/singleton-services/backend
+npx ng g service service core/singleton-services/environment
 ~~~
 
 At this point we'd inspect the changes made to:
 
 ~~~
-src\app\core\singleton-services\backend.service.spec.ts
-src\app\core\singleton-services\backend.service.ts
+src\app\core\singleton-services\environment.service.spec.ts
+src\app\core\singleton-services\environment.service.ts
 ~~~
 
-Commit with comment "ng g service service backend"
+Commit with comment "ng g service service environment"
+
+TODO: Get rid of most of this environment stuff
+
+### Backend service
+
+~~~
+npx ng generate service core/singleton-services/backend/backend
+npx ng generate class core/singleton-services/backend/movie
+npx ng generate service core/singleton-services/backend/movies-cache
+~~~
+
+...which may be abbreviated to...
+
+~~~
+npx ng g service core/singleton-services/backend/backend
+npx ng g class core/singleton-services/backend/movie
+npx ng g service core/singleton-services/backend/movies-cache
+~~~
+
+At this point we'd inspect the changes made to:
+
+~~~
+src\app\core\singleton-services\backend\backend.service.spec.ts
+src\app\core\singleton-services\backend\backend.service.ts
+src\app\core\singleton-services\backend\movie.spec.ts
+src\app\core\singleton-services\backend\movie.ts
+src\app\core\singleton-services\backend\movies-cache.service.spec.ts
+src\app\core\singleton-services\backend\movies-cache.service.ts
+~~~
+
+Commit with comment "ng g service service backend, ng g class movie, ng g service service movies-cache"
+
+
+TODO: There's just a mess of changes that I put into the `bcfinal-theatermanagement-spa` microservice. Go there and look at them. Especially:
+
+~~~
+src\app\areas\movies\pages\movie-list\*
+src\app\core\singleton-services\backend\*
+src\environments\*
+~~~
+
+Commit with comment "Angular app displays cached movie list"
