--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
@@ -131,3 +131,299 @@ Rename `temporary.service.spec.ts` to `backend.pact.spec.ts`.
 
 Commit with the comment "Renamed spec to backend.pact.spec.ts.".
 
+## WIP
+
+src\app\pact\backend.pact.spec.ts
+
+~~~
+// import { Observable } from 'rxjs';
+// // TODO: Consider committing https://raw.githubusercontent.com/pact-foundation/pact-js/master/examples/karma/jasmine/client-spec.js as an interim commit.
+
+// import { HttpClientTestingModule } from '@angular/common/http/testing';
+// import { fakeAsync, TestBed } from '@angular/core/testing';
+// import { BackendService } from '../core/singleton-services/backend/backend.service';
+// import { PactWeb, Matchers, PactWebOptions } from '@pact-foundation/pact-web';
+// import { InjectionToken } from '@angular/core';
+// import { HttpClient } from '@angular/common/http';
+// import { Movie } from '../core/singleton-services/backend/movie';
+
+// // export const BACKEND_BASE_URL = new InjectionToken<string>('BACKEND_BASE_URL');
+
+// describe('BackendService', () => {
+//   let service: BackendService;
+//   let provider: PactWeb;
+
+//   beforeAll((done) => {
+//     // const packWebConfig: PactWebOptions = {
+//     //   port: 1234,
+//     //   host: '127.0.0.1',
+//     // };
+//     // provider = new PactWeb(packWebConfig);
+//     provider = new PactWeb();
+//     setTimeout(done, 10000);
+//     provider.removeInteractions();
+//     done();
+//   });
+
+//   beforeEach((done) => {
+//     TestBed.configureTestingModule({
+//       imports: [HttpClientTestingModule],
+//       providers: [
+//         // { provide: 'BACKEND_BASE_URL', useValue: `${provider.mockService.baseUrl}/api`},
+//         { provide: 'BACKEND_BASE_URL', useValue: 'http://127.0.0.1:1234/api' },
+//         BackendService
+//       ]
+//     });
+//     service = TestBed.inject(BackendService);
+//     done();
+//   });
+
+//   afterAll((done) => {
+//     provider.finalize().then(done, done.fail)
+//     // done();
+//   });
+
+//   it('should be created (by backend.pact.spec))', (done) => {
+//     expect(service).toBeTruthy();
+//     done();
+//   });
+
+//   it('should have correct baseUrl', (done) => {
+//     expect(service.baseUrl).toBe('http://127.0.0.1:1234/api');
+//     done();
+//   });
+
+//   // describe("getMovies", function () {
+//   //   beforeAll((done) => {
+//   //     const emptyMovies: any[] = [];
+//   //     provider
+//   //       .addInteraction(
+//   //         {
+//   //           state: "I am friends with Fred",
+//   //           uponReceiving: "a request friends",
+//   //           withRequest: {
+//   //             method: "GET",
+//   //             path: "/api/movies",
+//   //             headers: {
+//   //               Accept: "application/json",
+//   //             },
+//   //           },
+//   //           willRespondWith: {
+//   //             status: 200,
+//   //             headers: {
+//   //               "Content-Type": "application/json",
+//   //             },
+//   //             body: {
+//   //               emptyMovies
+//   //             },
+//   //           },
+//   //         }
+//   //       )
+//   //       .then(done, done.fail)
+//   //       // provider.mockService.writePact().then(done);
+//   //   });
+
+//   //   // it("always succeeds", (done) => {
+//   //   //   done();
+//   //   // });
+
+//   //   it("has no movies", (done) => {
+//   //     //Run the tests
+//   //     console.log(`********${provider.mockService.baseUrl}******************************`);
+//   //     // service.getMovies().subscribe(
+//   //     //   movies => {
+//   //     //     expect(movies).toEqual(
+//   //     //       [
+//   //     //       ]
+//   //     //     );
+//   //     //     console.log('success!');
+//   //     //     done();
+//   //     //   },
+//   //     //   error => done.fail(error)
+//   //     // );
+//   //     done();
+//   //     //provider.verify().then(done, done.fail)
+//   //   });
+
+//   //   // it("has no movies", fakeAsync(() => {
+//   //   //   // given
+//   //   //   var movies: Movie[] = [];
+
+//   //   //   // when
+//   //   //   // service.getMovies().subscribe(
+//   //   //   //   result => {
+//   //   //   //     movies = result;
+//   //   //   //   });
+
+//   //   //   service.getMovies().subscribe(
+//   //   //     result => {
+//   //   //       movies = result;
+//   //   //     });
+//   //   //   // then
+//   //   //   expect(movies).toEqual(
+//   //   //     [
+//   //   //     ]
+//   //   //   );
+
+//   //   //   // done();
+//   //   //   provider.verify();
+//   //   //   //provider.verify().then(done, done.fail)
+//   //   // }));
+//   // });
+
+//   describe("sayHello", () => {
+//     beforeAll(function (done) {
+//       provider.addInteraction({
+//         state: 'Yo!',
+//         uponReceiving: 'a request for say hello',
+//         withRequest: {
+//           method: 'GET',
+//           path: '/hello-service/api',
+//           query: 'name=Chris'
+//         },
+//         willRespondWith: {
+//           status: 200,
+//           headers: { "Content-Type": "application/json" },
+//           body: 'Hello Chris!'
+//         }
+//       })
+//       .then(function () { done() }, function (err) { done.fail(err) })
+//     })
+
+//     it("should say hello", function(done) {
+//       //Run the tests
+//       service.sayHello('Chris')
+//         .subscribe(res => {
+//           expect(res).toEqual('Hello Chris!')
+//           done()
+//         },
+//         err => {
+
+//         done.fail(err)
+//       })
+//     });
+
+//     // verify with Pact, and reset expectations
+//     it('successfully verifies', function(done) {
+//       provider.verify()
+//         .then(function(a) {
+//           done()
+//         }, function(e) {
+//           done.fail(e)
+//         })
+//     })
+//   })
+// });
+~~~
+
+~~~
+// Karma configuration file, see link for more information
+// https://karma-runner.github.io/1.0/config/configuration-file.html
+var path = require("path")
+
+module.exports = function (config) {
+  config.set({
+    basePath: '',
+    frameworks: ['jasmine', '@angular-devkit/build-angular', 'pact'],
+    plugins: [
+      require('karma-jasmine'),
+      require('karma-chrome-launcher'),
+      require('karma-jasmine-html-reporter'),
+      require('karma-coverage'),
+      require('@angular-devkit/build-angular/plugins/karma'),
+      require('@pact-foundation/karma-pact'),
+    ],
+
+    // Pact Providers
+    pact: [
+      {
+        port: 1234,
+        consumer: "KarmaJasmineConsumer",
+        provider: "KarmaJasmineProvider",
+        logLevel: "DEBUG",
+        // log: path.resolve(process.cwd(), "logs", "pact.log"),
+        dir: path.resolve(process.cwd(), "pacts"),
+      },
+    ],
+    proxies: {'/hello-service/api':'http://localhost:1234/hello-service/api'},
+    // proxies: {
+    //   '/api/': 'http://127.0.0.1:1234/api/'
+    // },
+    client: {
+      jasmine: {
+        // you can add configuration options for Jasmine here
+        // the possible options are listed at https://jasmine.github.io/api/edge/Configuration.html
+        // for example, you can disable the random execution with `random: false`
+        // or set a specific seed with `seed: 4321`
+      },
+      clearContext: false // leave Jasmine Spec Runner output visible in browser
+    },
+    jasmineHtmlReporter: {
+      suppressAll: true // removes the duplicated traces
+    },
+    coverageReporter: {
+      dir: require('path').join(__dirname, './coverage/project'),
+      subdir: '.',
+      reporters: [
+        { type: 'html' },
+        { type: 'text-summary' }
+      ]
+    },
+    reporters: ['progress', 'kjhtml'],
+    port: 9876,
+    colors: true,
+    logLevel: config.LOG_INFO,
+    autoWatch: true,
+    browsers: ['Chrome'],
+    singleRun: false,
+    restartOnFileChange: true
+  });
+};
+~~~
+
+src\app\app.module.ts
+~~~
+import { NgModule } from '@angular/core';
+import { BrowserModule } from '@angular/platform-browser';
+import { HttpClientModule } from '@angular/common/http';
+import { FormsModule } from '@angular/forms';
+import { environment } from 'src/environments/environment';
+
+// TODO: Alphabetize these
+import { AppRoutingModule } from './app-routing.module';
+import { AppComponent } from './app.component';
+import { BackendService } from './core/singleton-services/backend/backend.service';
+import { MovieListComponent } from './areas/movies/pages/movie-list/movie-list.component';
+import { DashboardComponent } from './areas/dashboard/pages/dashboard/dashboard.component';
+import { HeaderComponent } from './areas/app/header/header.component';
+import { PageNotFoundComponent } from './areas/404/pages/page-not-found/page-not-found.component';
+import { AboutComponent } from './areas/about/pages/about/about.component';
+
+@NgModule({
+  declarations: [
+    // TODO: Alphabetize these
+    AppComponent,
+    MovieListComponent,
+    DashboardComponent,
+    HeaderComponent,
+    PageNotFoundComponent,
+    AboutComponent
+  ],
+  imports: [
+    BrowserModule,
+    AppRoutingModule,
+    FormsModule,
+    HttpClientModule
+  ],
+  providers: [
+    AppComponent,
+    BackendService,
+    { provide: 'BACKEND_BASE_URL', useFactory: () => environment.apiBaseUrl }
+  ],
+  exports: [
+    HeaderComponent
+  ],
+  bootstrap: [AppComponent]
+})
+export class AppModule { }
+~~~
