Fixed a copy-and-paste problem.

--- a/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
+++ b/content/en/docs/Microservices Dev Bootcamp/010. Angular SPA/048. Pact.md
@@ -13,6 +13,7 @@ This approach came from:
  - [Creating a Consumer-Driven Contract with Angular and Pact](https://reflectoring.io/consumer-driven-contracts-with-angular-and-pact/)
  - [Using Pact with Karma](https://github.com/pact-foundation/pact-js#using-pact-with-karma)
  - [pact-js/examples/karma/jasmine/](https://github.com/pact-foundation/pact-js/tree/master/examples/karma/jasmine)
+ - [ koelec / angular-pact-example](https://github.com/koelec/angular-pact-example)
 
 ## Add /logs to .gitignore
 
@@ -27,7 +28,7 @@ so add these lines to `.gitignore`:
 
 Commit with the comment "Added /logs to .gitignore".
 
-## Install bootstrap and bootswatch
+## Install Pact packages
 
 What you'll install:
  - [pact-node](https://github.com/pact-foundation/pact-node) is a wrapper around the original Ruby implementation of Pact that, among other things, allows to run a mock provider and create contract files - or “pacts”, as they are called when using Pact - from Javascript code.
